ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.2
    • Affects Version/s: 2.1.1
    • Component/s: Stability
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A simple program that can make the mongod server crash:

      string errMsg;
      DBClientConnection conn;
      conn.connect( "localhost:27017", errMsg );
      
      BSONObj result;
      conn.runCommand( "", BSON( "count" << "" ), result );
      

      Note: v2.0.4 handles this gracefully by throwing the assertion: "User Assertion: 13074:db name can't be empty"

            Assignee:
            Randolph Tan
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: