SERVER-5926 Segfault when procesing a command with empty namespace

Added proper namespace checking before processing requests on mongod. Also added some fasserts on DBLocks