src/mongo/db/ops/query.cpp
@@ -790,6 +790,9 @@ namespace mongo {
         curop.debug().query = jsobj;
         curop.setQuery(jsobj);
 
+        const NamespaceString nsString( ns );
+        uassert( 16256, str::stream() << "Invalid ns [" << ns << "]", nsString.isValid() );
+
         // Run a command.
         
         if ( pq.couldBeCommand() ) {
